fix(lookmart): fix social-networks block alignment
[MINOR] исправит выравнивание блоков соц.сетей
https://jira.railsc.ru/browse/SG-7582

--- a/src/blocks/lookmart/social-networks/social-networks_small.css
+++ b/src/blocks/lookmart/social-networks/social-networks_small.css
@@ -1,4 +1,5 @@
 .social-networks_small .social-networks {
+  justify-content: space-around;
   width: 260px;
 }
 .social-networks_small .social-networks__item {
